SONARGO-80 Update sonarlint-core dependency